--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.13",
+    "@yandex/ymaps3-types": "^0.0.22",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-photo-view": "^1.2.4"
+    "react-photo-view": "^1.2.4",
+    "react-yandex-maps": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
