Yandex map Bug, env apiKey

--- a/frontend/.env
+++ b/frontend/.env
@@ -6,3 +6,4 @@ GOOGLE_CLIENT_ID=86291010297-h512geljhj89s123llqibpifrhj9qr1i.apps.googleusercon
 GOOGLE_CLIENT_SECRET=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
 YANDEX_CLIENT_ID=094e11b436584f438a988fb5d6f19d7c
 YANDEX_CLIENT_SECRET=900a1ef3eb304d8ab507eb112398a7ef
+YANDEX_APIKEY_MAP=d224c45f-431b-4a41-b48d-17cbcb27cbd0
