--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "devWithBack": "next dev && cd ../backend && npm run develop",
     "build": "next build",
-    "buildWithBack": "next build && cd ../backend && npm run develop",
+    "buildW": "next build && cd ../backend && npm run develop",
+    "buildWithBack": "concurrently \"next build\" \"cd ../backend && npm run develop\"",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.13",
     "@yandex/ymaps3-types": "^0.0.22",
+    "concurrently": "^8.2.2",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
