--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "devWithBack": "next dev && cd ../backend && npm run develop",
     "build": "next build",
     "buildW": "next build && cd ../backend && npm run develop",
-    "buildWithBack": "concurrently \"next build\" \"cd ../backend && npm run develop\"",
+    "server": "cd ../backend && yarn develop",
+    "buildWithBack": "concurrently \"bun dev\" \"cd ../backend && yarn develop\"",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,7 +17,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.13",
     "@yandex/ymaps3-types": "^0.0.22",
-    "concurrently": "^8.2.2",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
@@ -31,6 +31,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
