--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
-  "homepage": ".",
+  "homepage": "https://shop-api-pink.vercel.app",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
