--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.13",
+    "@tanstack/react-query": "^5.28.9",
     "@yandex/ymaps3-types": "^0.0.22",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
@@ -23,6 +24,8 @@
     "react-yandex-maps": "^4.6.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.28.6",
+    "@tanstack/react-query-devtools": "^5.28.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
