--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.13",
     "@tanstack/react-query": "^5.28.9",
     "@yandex/ymaps3-types": "^0.0.22",
+    "classnames": "^2.5.1",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
