--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.13",
     "@tanstack/react-query": "^5.28.9",
+    "@types/mui-image": "^1.0.5",
     "@yandex/ymaps3-types": "^0.0.22",
     "classnames": "^2.5.1",
     "lucide-react": "^0.358.0",
+    "mui-image": "^1.0.7",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
