--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-photo-view": "^1.2.4",
-    "react-yandex-maps": "^4.6.0"
+    "react-yandex-maps": "^4.6.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.6",
