--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/mui-image": "^1.0.5",
     "@yandex/ymaps3-types": "^0.0.22",
     "classnames": "^2.5.1",
+    "immer": "^10.0.4",
     "lucide-react": "^0.358.0",
     "mui-image": "^1.0.7",
     "next": "14.1.3",
