--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/mui-image": "^1.0.5",
     "@yandex/ymaps3-types": "^0.0.22",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.10",
     "immer": "^10.0.4",
     "lucide-react": "^0.358.0",
     "mui-image": "^1.0.7",
@@ -24,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
+    "react-hot-toast": "^2.4.1",
     "react-photo-view": "^1.2.4",
     "react-yandex-maps": "^4.6.0",
     "zustand": "^4.5.2"
